build:搭建hexo blog

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: wtw's Frontend
 subtitle: 道阻且长,行则将至💪🏻
 description: 前端领域内所不知道的都探索于此!
 keywords: hexo,hexo blog,webpack
-author: John Doe
+author: wtw
 language: zh-CN
 timezone: ''
 
