--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: wtw's Frontend
 subtitle: 道阻且长,行则将至💪🏻
 description: 前端领域内所不知道的都探索于此!
 keywords: hexo,hexo blog,webpack
-author: wtw
+author: wtw(比木白)
 language: zh-CN
 timezone: ''
 
