--- a/_config.yml
+++ b/_config.yml
@@ -117,3 +117,11 @@ deploy:
 browsersync:
   watch: true
   logLevel: "warn"
+
+#Sitemap
+sitemap:
+  path: sitemap.xml
+  template: ./sitemap_template.xml
+  rel: false
+  tag: true
+  category: false
