--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "clean": "hexo clean",
-    "publish": "yarn run clean && hexo generate -d",
+    "publish": "git push && yarn run clean && hexo generate -d",
     "server": "hexo server",
-    "start": "yarn run clean && yarn run server -p 9777"
+    "start": "yarn run clean && yarn run server -p 9777",
+    "gitalk": "node talk-auto-init.js"
   },
   "hexo": {
     "version": "5.4.2"
@@ -21,11 +22,18 @@
     "hexo-generator-index": "^2.0.0",
     "hexo-generator-search": "^2.4.3",
     "hexo-generator-searchdb": "^1.4.0",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^4.0.0",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-server": "^2.0.0",
     "hexo-theme-landscape": "^0.0.3"
+  },
+  "devDependencies": {
+    "md5": "^2.3.0",
+    "moment": "^2.29.4",
+    "request": "^2.88.2",
+    "xml-parser": "^1.2.1"
   }
 }
